# possible

./: .cursorignore  .env  .env.dev  .env.development  .env.prod  .env.production  .env.staging  .eslintrc  .eslintrc.cjs  .gitattributes  .gitignore  .hintrc  .markdownlint.json  .npmrc  .prettierrc.json  .umirc.ts  LICENSE  README.md  auto-imports.d.ts  build.sh  components.d.ts  copy.bat  copy.sh  dev-app-update.yml  electron-builder.json5  electron-builder.yml  electron.vite.config.ts  env.d.ts  index.html  main.ts  package-lock.json  package.json  pnpm-lock.yaml  pubspec.yaml  readme.md  sync-api.bat  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  (+5 more)
android/: build.gradle  settings.gradle
assets/: .pnpm-DYHlCjVY.css  TestView-BhvH24Bx.js  TestView-C8DIFjYt.js  TestView-DLge5bF8.js  TestView-_eBzJEHG.css  index-0fIL-rKl.css  index-B2nLH2-R.js  index-B6DUpWj2.js  index-BstBUfTs.js  index-CJNIFw6t.css  index-CP4OCa7l.css  index-CSD5lfRh.css  index-CW3_ooQM.js  index-CwNgzFpe.css  index-DJ5LMHJy.css  index-DJECT1On.js  index-DUuW1EeQ.js  index-Db9XnbOm.css  index-DbMrPwss.js  index-DbtNCSed.js  index-OooTh2KM.css  index-ehGwjdJD.css  index-lIMrIRkl.css  index-pt5lC1zb.css  index-uv4W_fqB.js  worker-DNGSJ4Eg.js
components/: Content.module.css  content.js  flow.js
doc/: Icons生成.md  readme.md  replace-icon.md  使用openapi-generator-cli.md  开发说明.md  无边框.md  生成icon.md  自适应.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: controllers.rs  lib.rs  main.rs
(+592 files in other folders)
